--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <blockquote class="fst-italic">
                   "Turning ideas into scalable, robust web solutions."
                 </blockquote>
-                <a href="#" class="btn btn-primary">Get Started</a>
+                <a href="#" download="pdf/CV-ATS-Eriko Solin.pdf" class="btn btn-primary">Download My CV</a>
               </div>
             </div>
             <div class="col-md-5">
@@ -279,6 +279,13 @@
         </div>
       </section>
     </main>
+    <footer class=" text-center text-lg-start">
+      <!-- Copyright -->
+      <div class="text-center p-3 bg-dark text-light">
+          © 2025 Eriko Solin. All Rights Reserved.
+      </div>
+  </footer>
+  
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
