--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
                 <blockquote class="fst-italic">
                   "Turning ideas into scalable, robust web solutions."
                 </blockquote>
-                <a href="#" download="pdf/CV Eriko Mitro Konco Solin.pdf" class="btn btn-primary">Download My CV</a>
+                <a href="pdf/CV%20Eriko%20Mitro%20Konco%20Solin.pdf" download="CV Eriko Mitro Konco Solin.pdf" class="btn btn-primary">
+                  Download My CV
+              </a>
+              
               </div>
             </div>
             <div class="col-md-5">
